# TownBuilders

./: .gitmodules  FAITHFUL_LICENSE.txt  README.md
Apps/: package-lock.json  package.json
Apps/Playground/Android/: gradle.properties
Apps/Playground/Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Apps/Playground/Android/app/src/main/: AndroidManifest.xml
Apps/Playground/Android/app/src/main/cpp/: BabylonNativeJNI.cpp
Apps/Playground/Android/app/src/main/java/com/android/babylonnative/playground/: GridAutofitLayoutManager.java  (+5 more)
Apps/Playground/Android/app/src/main/res/layout/: activity_main.xml  activity_playground.xml  fragment_login.xml  item.xml
Apps/Playground/Android/app/src/main/res/values/: strings.xml  styles.xml
Apps/Playground/Android/app/src/main/res/values-en/: strings.xml
Apps/Playground/Android/gradle/wrapper/: gradle-wrapper.properties
Apps/Playground/Scripts/: experience.js  index.js
Core/Graphics/Source/: FrameBuffer.cpp
Dependencies/: CMakeLists.txt
Dependencies/AndroidExtensions/Source/: JavaWrappers.cpp
Dependencies/xr/: CMakeLists.txt
Dependencies/xr/Include/: XR.h
Dependencies/xr/Source/ARCore/: XR.cpp
Dependencies/xr/Source/ARCore/Include/: IXrContextARCore.h
Plugins/: CMakeLists.txt
Plugins/NativeEngine/Source/: NativeEngine.cpp
Plugins/NativeRTC/Include/Babylon/Plugins/: NativeRTC.h
Plugins/NativeRTC/Source/: NativeRTC.cpp
Plugins/NativeUI/: CMakeLists.txt
Plugins/NativeUI/Include/Babylon/Plugins/: NativeUI.h
Plugins/NativeUI/Source/: NativeUI.cpp
Plugins/NativeXr/Source/: NativeXr.cpp
(+10 files in other folders)
